app/assets/scss/_search-page.scss
@import "search/_search-summary.scss";

.search-summary {
  padding: 0 0 $gutter-half;

  em {
    font-style: normal;
    font-weight: bold;
  }
}

.button-save-wrapper {
  border-top: 1px solid $border-colour;
  border-bottom: 1px solid $border-colour;
  padding: 20px 5px;
  min-height: 34px;
  margin-bottom: 20px;

  .save-summary-text {
    display: inline-block;
    font-size: 16px;
    padding: 5px;
  }

  .save-button {
    display: inline-block;
    right: 0;
    float: right;

    .button-save {
      font-size: 16px;
    }
  }
}

@import "search/_search-result.scss";

em.search-result-highlighted-text {
  font-style: normal;
}

.search-page-filters {

  $lot-filters__gutter: 24px;

  .lot-filters {

    @include core-16;
    margin-bottom: $gutter;

    h2 {
      @include bold-19;
    }

    .lot-filters--last-list {
      margin-left: $lot-filters__gutter / 2;

      li[aria-current] strong {
        margin: 0;
      }
    }

    /* if there's no <strong> tag before the deepest list, we need some top spacing */
    a ~ .lot-filters--last-list {
      margin-top: $lot-filters__gutter / 2;
    }

    li {
      margin-top: $lot-filters__gutter / 8;

      &[aria-current] strong {
        display: inline-block;
        margin: ($lot-filters__gutter / 3) 0;
      }
    }

    a {
      text-decoration: none;
    }

    .lot-filters__top-level-link {
      padding-left: $lot-filters__gutter / 2;
      display: inline-block;
      position: relative;

      &:before {
        position: absolute;
        left: 0;
        top: 0;
        line-height: .70;
        content: "\2039"; /* left-pointing chevron */
        font-size: 1.333em;

        @include media(tablet) {
          line-height: .85;
        }
      }
    }
  }

  .dm-filters {

    .dm-filter-title {
      margin-bottom: 10px;

      .apply-filters-title {
        display: inline-block;
      }

      .clear-filters-link {
        float: right;
        font-size: 16px;
      }

    }

  }

  .govuk-option-select {
    margin-bottom: $gutter;
  }

  .option-select-label {
    display: block;
  }
}

.search-result-important-metadata {
  li {
    @include bold-19;
  }
}

